# pydata-seattle-2025-llm

./: .gitignore  .nojekyll  Makefile  index.html  llm-01-anatomy.html  llm-02-chatlas.html  llm-02-tools.html  llm-03-querychat.html  llm-03-tools.html  llm-04-querychat.html  llm-05-inspect.html  pyproject.toml  requirements.txt  robots.txt  search.json  setup.html  shiny-01-intro.html  shiny-02-app.html  shiny-03-reactivity.html  shiny-04-publish.html  sitemap.xml  welcome.html
.github/workflows/: publish.yml
code/01-intro/: app.py  code.py
code/02-dashboard/: app.py
code/03-llm/: app-20_questions.R  chatlas-anthropic.py  chatlas-openai.py
code/04-tools/: app.py  tools.py
code/05-ai-datascience/: app-core.py  app.py  data_description.md  greeting.md
code/06-ai-inspect/: code.py  eval.csv
site_libs/bootstrap/: bootstrap-3e41b4781af4a79ee5a2672636f35d59.min.css  bootstrap-a91d6c0d5d7cc72a3746ac48afe55193.min.css  bootstrap-dark-668ccced1f86dc68ff320da725645e38.min.css  bootstrap-dark-93c417c241edfdb76ff333787fb7a02f.min.css
slides/: llm-01-anatomy.html  llm-01-anatomy.qmd  llm-02-tools.html  llm-02-tools.qmd  shiny-01-intro.html  shiny-02-app.html  shiny-02-app.qmd  shiny-03-reactivity.html  welcome.html  welcome.qmd
website/: .gitignore  _quarto.yml  index.qmd  llm-01-anatomy.qmd  llm-02-chatlas.qmd  llm-03-tools.qmd  llm-04-querychat.qmd  llm-05-inspect.qmd  setup.qmd  shiny-01-intro.qmd  shiny-02-app.qmd  shiny-03-reactivity.qmd  shiny-04-publish.qmd  welcome.qmd
website/partials/: python-setup.qmd  schedule.qmd
website/slides/: llm-01-anatomy.qmd  (+4 more)
