[project]
name = "pydata-seattle-2025-llm"
version = "0.1.0"
description = "Tutorial site for PyData Seattle"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.72.0",
    "chatlas>=0.13.2",
    "dotenv>=0.9.9",
    "faicons>=0.2.2",
    "favicons>=0.2.0",
    "inspect-ai>=0.3.144",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "openai>=2.7.1",
    "palmerpenguins>=0.1.4",
    "plotly>=6.4.0",
    "plotnine>=0.13.6",
    "pyyaml>=6.0.3",
    "querychat==0.2.2",
    "ridgeplot>=0.4.0",
    "seaborn>=0.13.2",
    "shiny>=1.5.0",
]
